--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,41 @@ selenium-debug.log
 
 package-lock.json
 yarn.lock
+xhell6/Xshell Plus.zip
+xhell6/Xshell Plus/!绿化.bat
+xhell6/Xshell Plus/!卸载.bat
+xhell6/Xshell Plus/CrashRpt.dll
+xhell6/Xshell Plus/crashrpt_lang.ini
+xhell6/Xshell Plus/CrashSender.exe
+xhell6/Xshell Plus/example.tkm
+xhell6/Xshell Plus/filexfer.dat
+xhell6/Xshell Plus/NsCopyHook3.dll
+xhell6/Xshell Plus/nslicense.dll
+xhell6/Xshell Plus/nsprofile2.dll
+xhell6/Xshell Plus/nsresource.dll
+xhell6/Xshell Plus/nssecurity.dll
+xhell6/Xshell Plus/nssftp.dll
+xhell6/Xshell Plus/nssock2.dll
+xhell6/Xshell Plus/nsssh3.dll
+xhell6/Xshell Plus/nsutil2.dll
+xhell6/Xshell Plus/python34.dll
+xhell6/Xshell Plus/python34.zip
+xhell6/Xshell Plus/Xagent.exe
+xhell6/Xshell Plus/Xftp.exe
+xhell6/Xshell Plus/Xshell.exe
+xhell6/Xshell Plus/XshellCore.exe
+xhell6/Xshell Plus/XshellCore.tlb
+xhell6/Xshell Plus/XshellLib.dll
+xhell6/Xshell Plus/Xtransport.exe
+xhell6/Xshell Plus/HighlightSample/New Highlight Set (Sample).hls
+xhell6/Xshell Plus/Languages/XagentCHS.dll
+xhell6/Xshell Plus/Languages/XftpCHS.dll
+xhell6/Xshell Plus/Languages/XshellCHS.dll
+xhell6/Xshell Plus/Languages/XshellCoreCHS.dll
+xhell6/Xshell Plus/Languages/XtransportCHS.dll
+xhell6/Xshell Plus/ScriptSample/Screen/xshell_screen.js
+xhell6/Xshell Plus/ScriptSample/Screen/xshell_screen.py
+xhell6/Xshell Plus/ScriptSample/Screen/xshell_screen.vbs
+xhell6/Xshell Plus/ScriptSample/Session/xshell_session.js
+xhell6/Xshell Plus/ScriptSample/Session/xshell_session.py
+xhell6/Xshell Plus/ScriptSample/Session/xshell_session.vbs
